news update for the 20th

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -11,7 +11,8 @@ date: 2020-07-15
 ### Table of Contents
 [1. Huawei is being banned from the UK's 5G network](#huawei-is-being-banned-from-the-uk's-5g-network)  
 [2. Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)   
-[3. Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)     
+[3. Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)   
+[4. Coronavirus: Third day of wrangling over huge EU recovery plan](coronavirus:-third-day-of-wrangling-over-huge-eu-recovery-plan)    
 
 
 ## [July 15th, 2020]
@@ -56,18 +57,23 @@ date: 2020-07-15
 - [Link to the article](https://www.bbc.com/news/technology-53425822)
 
 
+## [July 20th, 2020]
 
-##
-- **Who:**  
+## Coronavirus: Third day of wrangling over huge EU recovery plan
+- **Who:**  The EU leaders
 - **What:**  
-- **When:**  
-- **Where:**  
-- **Why:**  
-- **How:**  
+  - Trying to come up with a huge post-coronavirus economic recovery plan in a third day of a testy summit, despite a clash between the state members.  
+  - EU leaders first met on Friday in Brussels to discuss the bloc's €1 trillion seven-year budget and the planned stimulus package to help countries recover the pandemic.
+- **When:**  1st - 24th of July
+- **Where:**  In Brussels, Europa Building
+- **Why:** Some member states believe that the proposed €750bn is too large hence should come as loans, not grants.
 - **So?:**  
-- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
+  - The member states of EU are split between those hit hard by the outbreak (Italy and Spain), and those concerned about the costs of the recovery plan (Netherlands and Sweden).  
+  - Hence the deal might not be reached - Luxembourg Prime Minister said that he "had never seen positions as diametrically opposed as this.”
+- [Link to the article](https://www.bbc.com/news/world-europe-53461738)
 
 
+## [July 21th, 2020]
 
 ##
 - **Who:**  
