--- a/_posts/2020-07-15-Papers-2.md
+++ b/_posts/2020-07-15-Papers-2.md
@@ -17,21 +17,27 @@ date: 2020-07-16
 
 
 ### Table of Contents
-[1. Trends, Problems And Solutions of Recommender System](#trends,-problems-and-solutions-of-recommender-system)  
+[1. Recommender System at Ground Zero](#recommender-system-at-ground-zero)   
+[2. Breeds of Recommender System](#breeds-of-recommender-system)  
+[3. Challenges and Solutions of Recommender System](#challenges-and-solutions-of-recommender-system)   
+[4. Link to the Paper](https://ieeexplore.ieee.org/document/7148534)
+
+
 
 ## Recommender System at Ground Zero
 - It Emerged in the mid 1990's, when the researchers started focusing on recommendation problem that depends on the rating method.
 - The aim is to recommend the 'right' things to  'right' users.
 - **Examples:** YouTube, LinkedIn, Spotify, Amazon, etc
 
-## Breeds of Recommender System
 
+## Breeds of Recommender System
 | Recommender | Description | Advantages | Disadvantages |
 | ----------- | ----------- | ---------- | ------------- |
 | **Content-based Filtering Systems** | - Uses information of active users and data about the items. <br> **Steps:** 1. Gathers content data about the item( author, cost, i.e. metadata)<br>2. Process data and extract useful features and elements. | - Doesn’t require data of other users.  <br> - Has capabilities of recommending items to user with unique taste. | Items are limited to their initial descriptions or features.
 | **Collaborative Filtering Systems** | - Uses information about a set of users and their relations with the item to provide recommendations to the active user. <br> - Based on a few customers who are most similar to the active users - uses Cosine Similarity. <br> **1. User Based CF:** For each user, compute correlation with other users. For each item, aggregate the rating of the users highly correlated with each user. <br> **2. Item-based CF:** For each item, compute correlation with other items. For each user, aggregate his rating of the items highly correlated with each item. | Doesn’t need a representation of items. | The item can’t be recommended to any user until and unless the item is either rated by another user(s) or correlated with other similar items.|
 | **Demographic Filtering Systems** | - Uses demographic information such as age, gender, education, etc. of people for identifying types of user. <br> - Uses pre-existing knowledge of demographic information about the users and their opinions | - Doesn't require history of user ratings. <br> - Quick, easy and a straightforward method based on few observations | - Recommendations are stereotypical, as it depends on the assumption that users belong to a certain category. <br> - Security and privacy issues. |
-| **Hybrid recommender Systems** | - Uses a combination of two or more different recommendation techniques. <br> - Uses both item content and the ratings of all users
+| **Hybrid recommender Systems** | - Uses a combination of two or more different recommendation techniques. <br> - Uses both item content and the ratings of all users. | | |
+
 
 
 ## Challenges and Solutions of Recommender System
