added 21st's news

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -75,15 +75,21 @@ date: 2020-07-15
 
 ## [July 21th, 2020]
 
-##
-- **Who:**  
+## Coronavirus: Oxford vaccine triggers immune response
+- **Who:**  The vaccine developed by Oxford University
 - **What:**  
-- **When:**  
-- **Where:**  
-- **Why:**  
+  - It appears safe and triggers an immune response to the coronavirus.  
+  - Trials on 1077 people showed that it led to them making antibodies (small proteins made by the immune system) and T cells (white blood cell that help co-ordinate the immune system) that can fight the virus.
+  - The study showed 90% of people developed neutralising antibodies after one dose.
+
+- **When:**  On the 20th of July
+- **Where:**  In Oxford, United Kingdom
 - **How:**  
+  - They genetically engineered the virus that causes the common cold in chimpanzees.
 - **So?:**  
-- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
+  - It will now test if the vaccine is safe enough to give it to people. Hence more than 10,000 people will take part in the next stage of the trials in the UK.
+
+- [Link to the article](https://www.bbc.com/news/uk-53469839)
 
 
 
