--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -13,6 +13,9 @@ date: 2020-07-15
 [2. Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)   
 [3. Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)   
 [4. Coronavirus: Third day of wrangling over huge EU recovery plan](coronavirus:-third-day-of-wrangling-over-huge-eu-recovery-plan)    
+[5. Coronavirus: Oxford vaccine triggers immune response](#coronavirus:-oxford-vaccine-triggers-immune-response)    
+[6. Adobe, IBM team up on marketing software for banking industry](#adobe,-ibm-team-up-on-marketing-software-for-banking-industry)
+
 
 
 ## [July 15th, 2020]
@@ -81,27 +84,28 @@ date: 2020-07-15
   - It appears safe and triggers an immune response to the coronavirus.  
   - Trials on 1077 people showed that it led to them making antibodies (small proteins made by the immune system) and T cells (white blood cell that help co-ordinate the immune system) that can fight the virus.
   - The study showed 90% of people developed neutralising antibodies after one dose.
-
 - **When:**  On the 20th of July
 - **Where:**  In Oxford, United Kingdom
 - **How:**  
   - They genetically engineered the virus that causes the common cold in chimpanzees.
 - **So?:**  
   - It will now test if the vaccine is safe enough to give it to people. Hence more than 10,000 people will take part in the next stage of the trials in the UK.
-
 - [Link to the article](https://www.bbc.com/news/uk-53469839)
 
 
 
-##
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Where:**  
-- **Why:**  
+## [July 22nd, 2020]
+
+## Adobe, IBM team up on marketing software for banking industry
+- **Who:**  Adobe Inc and International Business Machines Corp (IBM)
+- **What:**  The two companies are teaming up to make marketing software easier to use for banks that face strict controls on how customer data must be handled.
+- **When:**  On the 21st of July
+- **Why:**  Banks handle sensitive customer data which is strictly regulated by the U.S. government, and building the web pages for more intimate functions such as mortgage application can get more complex.
 - **How:**  
-- **So?:**  
-- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
+  - The plan is for Adobe’s software to run in IBM’s cloud system that has received regulatory approval for use by banks, allowing for the full digitalisation of the banking system.
+  - IBM will also be able to connect the cloud-based system to a bank’s internal stores of customer data, which is better for the company's marketing campaign.
+- **So?:**  It might be possible to handle all of the sensitive banking data 100% digitally.
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
 
 
 
