Done summarising recommender paper

--- a/_posts/2020-07-15-Papers-2.md
+++ b/_posts/2020-07-15-Papers-2.md
@@ -8,6 +8,8 @@ date: 2020-07-16
 
 
 ## **Trends, Problems And Solutions of Recommender System**
+#### S. Jain, A. Grover, P. S. Thakur and S. K. Choudhary, International Conference on Computing, Communication & Automation, Noida, 2015, pp. 955-958
+
 
 - Recommender System is an information filtering system that aims at predicting the preference of rating given to an item by any user, thereby helping users make personalised decision.
 - The paper discusses various approaches used in the various recommender systems such as Content based, Collaborative and Hybrid recommender system.   
@@ -36,12 +38,31 @@ date: 2020-07-16
 | **Content-based Filtering Systems** | - Uses information of active users and data about the items. <br> **Steps:** 1. Gathers content data about the item( author, cost, i.e. metadata)<br>2. Process data and extract useful features and elements. | - Doesn’t require data of other users.  <br> - Has capabilities of recommending items to user with unique taste. | Items are limited to their initial descriptions or features.
 | **Collaborative Filtering Systems** | - Uses information about a set of users and their relations with the item to provide recommendations to the active user. <br> - Based on a few customers who are most similar to the active users - uses Cosine Similarity. <br> **1. User Based CF:** For each user, compute correlation with other users. For each item, aggregate the rating of the users highly correlated with each user. <br> **2. Item-based CF:** For each item, compute correlation with other items. For each user, aggregate his rating of the items highly correlated with each item. | Doesn’t need a representation of items. | The item can’t be recommended to any user until and unless the item is either rated by another user(s) or correlated with other similar items.|
 | **Demographic Filtering Systems** | - Uses demographic information such as age, gender, education, etc. of people for identifying types of user. <br> - Uses pre-existing knowledge of demographic information about the users and their opinions | - Doesn't require history of user ratings. <br> - Quick, easy and a straightforward method based on few observations | - Recommendations are stereotypical, as it depends on the assumption that users belong to a certain category. <br> - Security and privacy issues. |
-| **Hybrid recommender Systems** | - Uses a combination of two or more different recommendation techniques. <br> - Uses both item content and the ratings of all users. | | |
+| **Hybrid recommender Systems** | - Uses a combination of two or more different recommendation techniques. <br> - Uses both item content and the ratings of all users. | Can overcome various problems caused by a single recommender system | Can be complex to implement as the hybridisation method needs to be chosen carefully. |
 
 
 
 ## Challenges and Solutions of Recommender System
+- **Cold-start**
+  - Cold-start of new items: When there aren't enough previous ratings related to the item.
+  - Cold-start of new users: When the system don’t have any information related to user's past purchases or ratings.
+  - **Solution:** Can use demographic information about the user from SNS or the sign-up page. Additionally, an hybrid approach of i.e. using collaborative filtering with demographic recommending approach to suggest items to a new user can be used.
 
+- **Scalability**
+  - As the number of users and items grows, the system needs more resources and a bigger pool to recommend from.
+  - Is an apparent problem in Collaborative filtering approach.
+
+- **Privacy**
+  - Problem as it collects user's demographic information - which may breach the privacy of the user.
+
+- **Sparsity**
+  - Is caused by the insufficient number of user's interaction with the system and feedback data.
+  - **Solution:** Can be resolved with a hybrid-recommendation. The amount of information people have in common can be increased by using the attributes of an item instead of the item itself.
+
+- **Over-Specialisation (Filter bubble)**
+  - It gives nothing "surprising" to the user - in other words, users can expect the recommendation they will get.
+  - Is an apparent problem in content-based recommendation.
+  - **Solution:** Can be overcome with neighborhood based collaborative filtering technique. K-neighbours can be used to consider the similarity levels between the user/items and candidate neighbours.
 
 
 [Link to the Paper](https://ieeexplore.ieee.org/document/7148534)
