added 24th's news

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -15,7 +15,7 @@ date: 2020-07-15
 [4. Coronavirus: Third day of wrangling over huge EU recovery plan](coronavirus:-third-day-of-wrangling-over-huge-eu-recovery-plan)    
 [5. Coronavirus: Oxford vaccine triggers immune response](#coronavirus:-oxford-vaccine-triggers-immune-response)    
 [6. Adobe, IBM team up on marketing software for banking industry](#adobe,-ibm-team-up-on-marketing-software-for-banking-industry)
-
+[7. ## Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students,-foreign-schools-scale-great-firewall)
 
 
 ## [July 15th, 2020]
@@ -110,4 +110,80 @@ date: 2020-07-15
 
 
 
-## [July 17th, 2020]
+## [July 24th, 2020]
+
+## Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall
+- **Who:**  China’s Alibaba Group Holding Ltd
+- **What:**
+  - Launched a new business opportunity of offering the mainland Chinese students help skirt China’s stringent internet controls to keep classes going for their foreign universities.
+  - Alibaba has been aggressively promoting its services and plans to spend $28 billion over three years on next-generation data centres.
+- **When:** Soon after the virus started spreading globally the group discussed about the service - the service is launching on the 20th of July.
+- **Where:** In Mainland China
+- **Why:**
+  - The Chinese students, after returning home, have been having difficulties watching live-streamed tutorials or accessing class materials due to the so-called Great Firewall.
+  - During the challenging time of the coronavirus, cloud-based technologies play an important role to help people adopt to the new normal.
+- **How:**
+  - The service allows students to access the contents in the cloud without latency and offers a VPN-like service which allows students to browse content-related web pages.
+- **So?:** The students can access their university material without any effort.
+- [Link to the article](https://www.reuters.com/article/us-alibaba-cloud-vpn/alibaba-cloud-helps-chinese-students-foreign-schools-scale-great-firewall-idUSKCN24O356)
+
+
+
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+
+
+
+
+
+
+## [July 24th, 2020]
+
+##
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+
+
+
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+
+
+
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
