--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -16,6 +16,9 @@ date: 2020-07-15
 [5. Coronavirus: Oxford vaccine triggers immune response](#coronavirus:-oxford-vaccine-triggers-immune-response)    
 [6. Adobe, IBM team up on marketing software for banking industry](#adobe,-ibm-team-up-on-marketing-software-for-banking-industry)
 [7. ## Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students,-foreign-schools-scale-great-firewall)
+[8. Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)
+
+
 
 
 ## [July 15th, 2020]
@@ -131,16 +134,19 @@ date: 2020-07-15
 
 
 
-## [July 24th, 2020]
+## [July 27th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
-- **How:**
+##  Australian regulator sues Google over expanded personal data use
+- **Who:**  Australia’s competition regulator
+- **What:** They have launched court proceedings against Google for allegedly misleading consumers about the extended use of personal data for targeted advertising.
+- **When:**  on the 27th of July, 2020
+- **Why:**  The regulator alleges Google used combined data of Google accounts with activities on non-Google websites to boost its income, and did not make clear to consumers about changes in its privacy policy.
+- **How:** The Australian Competition and Consumer Commission (ACCC) raised a case against Google.
 - **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - Google did not immediately respond to a request for comment.
+  - The issue is to be highlighted more - the data privacy issue has been on the spotlight and the U.S. and European lawmakers have recently strengthened the ways that tech companies treat user data due to privacy concerns.
+  - The regulator did not say what it wanted the court to do.
+- [Link to the article](https://www.reuters.com/article/us-google-australia/australian-regulator-sues-google-over-expanded-personal-data-use-idUSKCN24R0VQ)
 
 
 
