added 29th news

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -17,7 +17,7 @@ date: 2020-07-15
 [6. Adobe, IBM team up on marketing software for banking industry](#adobe,-ibm-team-up-on-marketing-software-for-banking-industry)
 [7. ## Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students,-foreign-schools-scale-great-firewall)
 [8. Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)
-
+[9. U.S. Republicans worry China might use TikTok to meddle in election](u-s-republicans-worry-china-might-use-tik-tok-to-meddle-in-election)
 
 
 
@@ -153,22 +153,24 @@ date: 2020-07-15
 
 
 
-## [July 24th, 2020]
+## [July 29th, 2020]
 
-##
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
-- **How:**
+## U.S. Republicans worry China might use TikTok to meddle in election
+- **Who:**  A group of top Republican U.S. Senators
+- **What:** Has raised an issue about TikTok to the Trump administration to assess the threat that the popular Chinese-owned video platform might meddle the US elections.
+- **When:** 28th of July, 2020
+- **Why:**  TikTok has been censoring sensitive content, including videos of Uighur minorities and Beijing's alleged attempts to manipulate political discussions. Therefore, the lawmakers were concerned that the Chinese government could use control over TikTok to distort or manipulate (political) conversations to achieve its preferred political outcomes.
+- **How:** Though TikTok is not a "go-to" for political news, it could amplify certain political views through the popular app.
 - **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - TikTok replied saying that the content and moderation policies are led by a California-based team and aren’t “influenced by any foreign government.”
+  - White House Chief of Staff Mark Meadows said action was imminent to address national security risks posed by TikTok.
+- [Link to the article](White House Chief of Staff Mark Meadows said action was imminent to address national security risks posed by TikTok.)
 
 
 
 
 
-## [July 24th, 2020]
+## [July 30th, 2020]
 
 ##  
 - **Who:**  
