--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -18,7 +18,7 @@ date: 2020-07-15
 [7. ## Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students,-foreign-schools-scale-great-firewall)
 [8. Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)
 [9. U.S. Republicans worry China might use TikTok to meddle in election](u-s-republicans-worry-china-might-use-tik-tok-to-meddle-in-election)
-
+[10. India found cybersecurity lapses at National Payments Corp in 2019 - government document](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document)
 
 
 ## [July 15th, 2020]
@@ -172,14 +172,19 @@ date: 2020-07-15
 
 ## [July 30th, 2020]
 
-##  
-- **Who:**  
+## India found cybersecurity lapses at National Payments Corp in 2019 - government document
+- **Who:** The government audit team of 10 to 12 people at NPCI’s Mumbai headquarters and offices in two other cities.
 - **What:**
-- **When:**  
-- **Why:**   
-- **How:**
-- **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - Found more than 40 security vulnerabilites in India's flagship payments processor, National Payments Corporation of India (NPCI), including critical and high risk vulnerabilite such as lack of encryption of personal data.
+  - Other high risk issues in RuPay and other NPCI applications cited by the government audit included so-called “buffer overflow” vulnerability - which takes advantage of coding mistakes.
+- **When:** The audit took place over four months to February 2019
+- **Why:** The audit was undertaken to provide Modi’s National Security Council with an overview of the NPCI’s defences against cyberattacks.
+- **How:**  Card number and personal information such as customer names, account numbers and national identity numbers in “plain text” in some databases, leading to a breach of data.
+- **So?:**  
+   - Prime Minister Modi’s office and the finance ministry did not respond to a Reuters request for comment. Whereas, NPCI said in its statement to Reuters that it stores card data in line with standards set by the PCI Security Standards Council.
+   - But the pressure to financial institutions to mount effective defences to protect their customers from malicious cyberattacks is growing.
+
+- [Link to the article](https://www.reuters.com/article/us-india-cybersecurity-payments-exclusiv/exclusive-india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document-idUSKCN24V0HB)
 
 
 
