11th's news about digitalisation

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -19,6 +19,7 @@ date: 2020-07-15
 [8. Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)
 [9. U.S. Republicans worry China might use TikTok to meddle in election](u-s-republicans-worry-china-might-use-tik-tok-to-meddle-in-election)
 [10. India found cybersecurity lapses at National Payments Corp in 2019 - government document](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document)
+[11.Coronavirus accelerates European utilities' digital drive](#coronavirus-accelerates-european-utilities-digital-drive)
 
 
 ## [July 15th, 2020]
@@ -188,6 +189,58 @@ date: 2020-07-15
 
 
 
+## [August 11th, 2020]
+
+##  Coronavirus accelerates European utilities' digital drive
+- **Who:**  European utility companies
+- **What:** To properly respond to the challenges of COVID, company Enel has boosted their overall digitalisation drive.
+- **Why:**  
+  - European utilities are having to speed up the adoption of new technologies as the coronavirus crisis forces them to use software, not people, to steer critical infrastructure including plants and grids.
+  - Companies that started digital programs earlier have been more resilient during the pandemic. Hence there is a need to reconsider the technology priorities.
+- **How:**
+  - Enel has created a parallel backup control room close to the plant and plugging some workers into their database to utilize working from home.
+  - E.ON has virtually recreated substations to train staff remotely and provide remote access to partner firms.
+- **So?:**
+  - The pandemic has created advantages for businesses immune to shutdowns and restrictions, allowing for remote working and smooth service provision.
+  - The digitalisation not only facilitates the management of plants and grids efficiently and fast,, but also roll out new services and create new revenue streams.
+  - But such drives don’t come without risks as the increased need to work remotely also raises the chance of cyberattacks - therefore, a more reliable risk management strategy needs to be designed.
+- [Link to the article](https://www.reuters.com/article/us-health-coronavirus-utilities-tech-foc/coronavirus-accelerates-european-utilities-digital-drive-idUSKCN2560OK)
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+
+
+## [July 24th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**   
+- **How:**
+- **So?:**
+- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
 
 
 ## [July 24th, 2020]
