updated 12th news abt Google's earthquake alert

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -20,6 +20,7 @@ date: 2020-07-15
 [9. U.S. Republicans worry China might use TikTok to meddle in election](u-s-republicans-worry-china-might-use-tik-tok-to-meddle-in-election)
 [10. India found cybersecurity lapses at National Payments Corp in 2019 - government document](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document)
 [11.Coronavirus accelerates European utilities' digital drive](#coronavirus-accelerates-european-utilities-digital-drive)
+[12.Google turns Android phones into earthquake sensors; California to get alerts](##google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts)
 
 
 ## [July 15th, 2020]
@@ -207,7 +208,20 @@ date: 2020-07-15
 - [Link to the article](https://www.reuters.com/article/us-health-coronavirus-utilities-tech-foc/coronavirus-accelerates-european-utilities-digital-drive-idUSKCN2560OK)
 
 
-## [July 24th, 2020]
+## [August 12th, 2020]
+
+##  Google turns Android phones into earthquake sensors; California to get alerts
+- **Who:**  Alphabet Inc’s Google
+- **What:** Turning smartphones into mini-seismographs to detect earthquakes around the world to provide data for alerting feature.
+- **Why:**  To make the earthquake detection and alert more effective and safe for countries who use traditional sensors for earthquake detection.
+- **How:**
+  - By turning smartphones into mini-seismographs. Using accelerometers on an android device, when it detects an earthquake, the phone sends their city-level location to Google, which can triangulate the epicenter and estimate the magnitude with several hundred reports.
+  - People expected to experience strong shaking would hear a loud dinging and see a full-screen advisement to drop, cover and hold on.
+- **So?:** If Google’s approaches for detecting and alerting prove effective, warnings would reach more people, including for the first time Indonesia and other developing countries with few traditional sensors.
+- [Link to the article](https://www.reuters.com/article/us-alphabet-google-quake/google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts-idUSKCN2571TN)
+
+
+## [August 12th, 2020]
 
 ##  
 - **Who:**  
@@ -219,7 +233,7 @@ date: 2020-07-15
 - [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
 
 
-## [July 24th, 2020]
+## [August 12th, 2020]
 
 ##  
 - **Who:**  
@@ -231,19 +245,7 @@ date: 2020-07-15
 - [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
 
 
-## [July 24th, 2020]
-
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
-- **How:**
-- **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
-
-
-## [July 24th, 2020]
+## [August 12th, 2020]
 
 ##  
 - **Who:**  
