--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -21,6 +21,7 @@ date: 2020-07-15
 [10. India found cybersecurity lapses at National Payments Corp in 2019 - government document](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document)
 [11.Coronavirus accelerates European utilities' digital drive](#coronavirus-accelerates-european-utilities-digital-drive)
 [12.Google turns Android phones into earthquake sensors; California to get alerts](##google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts)
+[13.Coronavirus: England's contact-tracing app gets green light for trial](##coronavirus-england-s-contact-tracing-app-gets-green-light-for-trial)
 
 
 ## [July 15th, 2020]
@@ -221,16 +222,24 @@ date: 2020-07-15
 - [Link to the article](https://www.reuters.com/article/us-alphabet-google-quake/google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts-idUSKCN2571TN)
 
 
-## [August 12th, 2020]
+## [August 13th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
-- **How:**
+##  Coronavirus: England's contact-tracing app gets green light for trial
+- **Who:**  England
+- **What:** England's revamped coronavirus contact-tracing app is set to begin public trials on Thursday.
+- **When:**  13th of August, 2020
+- **Why:**  
+  - Tp test the effectiveness of the application before the national launch.
+  - The app should enable the Britons to return to more normal daily activities with the reassurance that their contacts can be rapidly and anonymously notified if they get infected. 
+- **How:**  
+  - The idea behind the app is to use people's phones to log when they have been close to another person for so long, that there is a high risk of contagion.
+  - So that if one user is diagnosed with the disease, the other person can be alerted too.
+  - They also need to scan a QR code when they enter a property for location tracing.
 - **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - There has been a problem with the Apple-Google framework as developers do not get the raw attenuation data - not being able to take advantage of a data filtering technique developed by researchers at Turing Institute and Oxford.
+  - The team behind England's app hopes it can still improve the accuracy rate to a high enough - but not perfect - level by the end of the year.
+  - The new Isle of Wight trial will allow them to see how the software behaves in real-world situations, to help further their endeavours.
+- [Link to the article](https://www.bbc.com/news/technology-53753678)
 
 
 ## [August 12th, 2020]
