--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -22,7 +22,7 @@ date: 2020-07-15
 [11.Coronavirus accelerates European utilities' digital drive](#coronavirus-accelerates-european-utilities-digital-drive)
 [12.Google turns Android phones into earthquake sensors; California to get alerts](##google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts)
 [13.Coronavirus: England's contact-tracing app gets green light for trial](##coronavirus-england-s-contact-tracing-app-gets-green-light-for-trial)
-
+[14.Amazon launches online pharmacy in India](##amazon-launches-online-pharmacy-in-india)
 
 ## [July 15th, 2020]
 
@@ -242,16 +242,20 @@ date: 2020-07-15
 - [Link to the article](https://www.bbc.com/news/technology-53753678)
 
 
-## [August 12th, 2020]
+## [August 15th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
-- **How:**
+##  Amazon launches online pharmacy in India
+- **Who:**  The tech giant, Amazon
+- **What:** Amazon has launched an internet pharmacy in India, marking its entry into the country's online medicine market. They offer prescription, over-the-counter and traditional Ayurveda medication as well as basic health devices.
+- **When:**  August, 2020 (but have started its move into pharmaceutical retailing in 2017)
+- **Why:**
+  - As the online drugs business has been given a major boost during the coronavirus pandemic.  
+  - The online pharmacy business is expected to grow at a CAGR of 14.26 percent to reach $107.53 billion by 2025, according to Zion Market Research.
+  - It also helps customers meet their essential needs while staying safe at home
 - **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - The customers will be able to get their medications safely and more conveniently through the service.
+  - However, many trader groups continue to protest against e-pharmacies, saying it would lead to sale of medicines without proper verification.
+- [Link to the article](https://www.bbc.com/news/business-53775024)
 
 
 ## [August 12th, 2020]
