24ths news about security breach

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -23,6 +23,7 @@ date: 2020-07-15
 [12.Google turns Android phones into earthquake sensors; California to get alerts](##google-turns-android-phones-into-earthquake-sensors-california-to-get-alerts)
 [13.Coronavirus: England's contact-tracing app gets green light for trial](##coronavirus-england-s-contact-tracing-app-gets-green-light-for-trial)
 [14.Amazon launches online pharmacy in India](##amazon-launches-online-pharmacy-in-india)
+[15.Uber ex-security boss accused of covering up hack attack](##uber-ex-security-boss-accused-of-covering-up-hack-attack)
 
 ## [July 15th, 2020]
 
@@ -258,13 +259,15 @@ date: 2020-07-15
 - [Link to the article](https://www.bbc.com/news/business-53775024)
 
 
-## [August 12th, 2020]
+## [August 24th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**   
+##  Uber ex-security boss accused of covering up hack attack
+- **Who:**  Uber's former chief security officer Joseph Sullivan
+- **What:** He was charged with obstruction of justice in the US as the former security officer tried to cover up a data breach in 2016 that exposed the details of 57 million Uber drivers and passengers.
+- **When:**  Data breach in 2016, Accusation in August 2020
+- **Why:** He is accused of approving the $100,000 payment to the hackers, which was made in bitcoin to cover up the data leak.
 - **How:**
-- **So?:**
-- [Link to the article](https://www.reuters.com/article/us-adobe-ibm/adobe-ibm-team-up-on-marketing-software-for-banking-industry-idUSKCN24M1LW)
+  - The payment was disguised as a "bug bounty" reward. The charges allege that he asked the hackers to sign non-disclosure agreements, falsely stating they had not stolen any Uber data.
+  - The hackers broke into the systems anonymously, stole data and held the company to ransom.
+- **So?:**  The officer in charge was accused in the US.
+- [Link to the article](https://www.bbc.com/news/technology-53861375)
