2nd news about Bermuda's cryptocurrency

--- a/_posts/2020-07-15-News-Sept.md
+++ b/_posts/2020-07-15-News-Sept.md
@@ -8,7 +8,10 @@ date: 2020-09-01
 
 ## **September's Technology Updates**
 
-[1. Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)    
+[1. Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)   
+[2.Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)   
+
+
 
 
 ## [September 1st, 2020]
@@ -29,14 +32,18 @@ date: 2020-09-01
 
 ## [September 2nd, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program
+- **Who:**  British overseas territory, Bermuda
+- **What:**  
+  - Is testing a stimulus stablecoin to embrace cryptocurrencies, which can be used to buy food and other essentials.
+  - The stimulus token is a so-called stablecoin, which aims to keep its value from fluctuating much and is backed by bank deposits - It is completely backed by fiat and comply with its regulations.
+- **When:**  The pilot program started in July, and is still an ongoing project.
+- **Why:**  
+  - The coin, created by the Stablehouse coin clearing firm, was designed to be used by businesses the government wants to help.
+  - Bermuda is an ideal test bed, as it has a population of more than 71,000 and is seeking ways to provide financial services to residents, some of whom don’t have bank accounts, but carry smartphones.
+- **How:**  The country is accepting tax payments and fees in another stablecoin, along the basic shopping -  it is seeking to expand the usage within the country.
+- **So?:**  It’s also looking at using so-called decentralized finance applications to provide easier access to loans for its residents.
+- [Link to the article](https://www.bloomberg.com/news/articles/2020-09-01/bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program?srnd=technology-vp)
 
 
 
@@ -44,11 +51,11 @@ date: 2020-09-01
 
 ##  
 - **Who:**  
-- **What:**
+- **What:**  
 - **When:**  
-- **Why:**
+- **Why:**  
 - **How:**  
-- **So?:**
+- **So?:**  
 - [Link to the article]()
 
 
