added 21st about cryptocurrency in the EU

--- a/_posts/2020-07-15-News-Sept.md
+++ b/_posts/2020-07-15-News-Sept.md
@@ -8,8 +8,9 @@ date: 2020-09-01
 
 ## **September's Technology Updates**
 
-[1. Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)   
-[2.Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)   
+1. [Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)   
+2. [Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)    
+3. [EU to introduce crypto-assets regime by 2024, EU documents say](#eu-to-introduce-crypto-assets-regime-by-2024-eu-documents-say)  
 
 
 
@@ -47,16 +48,20 @@ date: 2020-09-01
 
 
 
-## [September 1st, 2020]
+## [September 21st, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
+##  EU to introduce crypto-assets regime by 2024, EU documents say
+- **Who:**  The European Union
+- **What:**  They will introduce new rules within four years to make cross-border payments quicker and cheaper through the use of blockchain and crypto assets like stablecoins.
+  - A comprehensive framework will be introduced, including the methods and risks associated with it.  
+- **When:**  Within four years - by 2024.
 - **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+  - To encourage a greater use of digital finance.
+  - Also because the EU wnats a rapid shift to 'instant' payments as the pandemic lockdowns showed the growing importance of cashless payment.
+  - TO make it easier to share data within the financial sector.
+- **How:**  The EU executive will present a draft law to clarify how existing rules apply to crypto assets and set out new rules where there are gaps.
+- **So?:**  With the ease of one-stop shop licensing, instant payment systems should become the “new normal” by the end of 2021.
+- [Link to the article](https://www.reuters.com/article/us-eu-cryptoassets/eu-to-introduce-crypto-assets-regime-by-2024-eu-documents-say-idUSKBN2692CP)
 
 
 
