5th's news ababout Tesla M&A

--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -39,37 +39,108 @@ date: 2020-09-07
 
 
 #### Steps and Pseudocode
-1. Example  
+##### Example  
 
-| Input | Output | Result |  
+| Input | Input in Binary | Result |  
 | ----- | ------ | ------ |
 |![1](https://user-images.githubusercontent.com/33334078/93730142-525a3880-fc02-11ea-956e-43fd025265b8.png) | ![2](https://user-images.githubusercontent.com/33334078/93730145-55edbf80-fc02-11ea-8087-1b2fba11ac2a.png) | **9** |  
 
 
 
+##### Algorithm 1. Tree traversal
+- Traverse the tree from the root, to the left and the right sub-tree (Pre-order - root, left, right)
+- **Steps**
+  1. Visit the root
+  2. Traverse the left subtree  
+  3. Traverse the right subtree
 
-2. Tree traversal
-- traverse the tree from the root, to the left and right sub Tree
-#### Pseudo
+
+###### Code
+```
+/* A binary tree node has data, pointer to left child
+   and a pointer to right child */
+
+struct node_t { 
+  uint8_t data; 
+  struct node_t *left; 
+  struct node_t  *right;
+ }; 
+
+void pre_order_traversal(struct node* root) {
+  if (root != NULL)
+    pre_order_traversal(root->left)
+    pre_order_traversal(root->right)
+```
 
 
-3. Check set bits
+##### Algorithm 2. Check set bits
   - Check if the last bit is odd.
     - if odd then ans+1
   - Shift the bits to the right
   - Shift until the end of the bits
 
-#### Pseudocode
+###### Code
 ```
-check_set_bits():
-  for (0 to len(bits)) {
-    if (last bit is odd) {
-      ans +=1
+
+int count_bits(struct node_t *n){
+  uint8_t data = n->data; 
+  int count = 0;
+
+  // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
+  for (int i = 0; i <= 8; i++){
+    // check if last bit is odd ( bc its always +1)
+    if (int i % 2 == 1) {
+      count +=1
     }
-    bit >> 1
+    // then shift one bit
+    i >> 1
+
+    return count;
   }
+
 ```
+
+
+
+##Code
+
+struct node_t { 
+  uint8_t data; 
+  struct node_t *left; 
+  struct node_t  *right;
+ }; 
+
+void pre_order_traversal(struct node* root) {
+  // set the count variable for each subtree
+  int root_count, left_count, right_count = 0;
+
+  if (root != NULL)
+    root_count = count_bits(root);
+    left_count = count_bits(root->left);
+    right_count = count_bits(root->right);
+
+  return root_count+left_count+right_count;
+
+
+int count_bits(struct node_t *n){
+  uint8_t data = n->data; 
+  int count = 0;
+
+  // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
+  for (int i = 0; i <= 8; i++){
+    // check if last bit is odd ( bc its always +1)
+    if (int i % 2 == 1) {
+      count +=1
+    }
+    // then shift one bit
+    i >> 1
+
+    return count;
+  }
+
 
 
 ! key
-- bitshiftitng
+- bitshiftitng  
+
+- Tree insertion source code [link](https://www.tutorialspoint.com/data_structures_algorithms/tree_traversal_in_c.htm)
