--- a/_posts/2020-07-15-News-Sept.md
+++ b/_posts/2020-07-15-News-Sept.md
@@ -6,11 +6,12 @@ categories:
 date: 2020-09-01
 ---
 
-## **September's Technology Updates**
+## **September/ October's Technology Updates**
 
 1. [Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)   
 2. [Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)    
 3. [EU to introduce crypto-assets regime by 2024, EU documents say](#eu-to-introduce-crypto-assets-regime-by-2024-eu-documents-say)  
+4. [Tesla to acquire German battery assembly maker](tesla-to-acquire-german-battery-assembly-maker)   
 
 
 
@@ -66,16 +67,16 @@ date: 2020-09-01
 
 
 
-## [September 1st, 2020]
+## [October 5th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  Tesla to acquire German battery assembly maker
+- **Who:**  Tesla Incorporation and ATW Automation
+- **What:**  The company has agreed to acquire the German assembler ATW Automation - a supplier assembling battery modules and packs for the auto industry.
+- **When:** On September 25th
+- **Why:**  Since electric cars are on the spotlight, a fast-charging, high-capacity battery is one of the major hurdles to clear. ATW was on the brink of liquidation due to a slump in orders, hence the mergers and acquisitions (M&A).
+- **How:**  The company is currently building its third vehicle manufacturing facility near Berlin, which will also include a battery plant, and aims to start construction on a new vehicle factory in Texas this year.
+- **So?:**  Tesla plans to ramp up battery production significantly in the coming years and sharply reduce the cost of battery packs within the next three years.
+- [Link to the article](https://www.reuters.com/article/us-tesla-ats-automation-germany/tesla-to-acquire-german-battery-assembly-maker-source-idUSKBN26N2VG)
 
 
 
