--- a/_posts/2020-07-15-News-Sept.md
+++ b/_posts/2020-07-15-News-Sept.md
@@ -11,7 +11,8 @@ date: 2020-09-01
 1. [Amazon's surveillance can boost output and possibly limit unions: study](#amazons-surveillance-can-boost-output-and-possibly-limit-unions-study)   
 2. [Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)    
 3. [EU to introduce crypto-assets regime by 2024, EU documents say](#eu-to-introduce-crypto-assets-regime-by-2024-eu-documents-say)  
-4. [Tesla to acquire German battery assembly maker](tesla-to-acquire-german-battery-assembly-maker)   
+4. [Tesla to acquire German battery assembly maker](#tesla-to-acquire-german-battery-assembly-maker)  
+5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)
 
 
 
@@ -81,16 +82,16 @@ date: 2020-09-01
 
 
 
-## [September 1st, 2020]
+## [October 6th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  Musk's SpaceX wins Pentagon award for missile tracking satellites
+- **Who:**  SpaceX
+- **What:**  They won a $149 million contract to build missile-tracking satellites for the Pentagon - the first government contract to build satellites.
+- **When:**  The company is expected to deliver the satellites for launch by fall 2022.
+- **Why:**  As the environmental issues are becoming more important, there is no reusable satellite yet - Hence SpaceX aims to develop further.
+- **How:**  Under the SDA contract, SpaceX will use its Starlink assembly plant in Redmond, Washington, to build four satellites fitted with a wide-angle infrared missile-tracking sensor supplied by a subcontractor.
+- **So?:**  If it goes to success, it will generate enough revenue to help fund SpaceX’s interplanetary goals. In addition, it will meet the ever-growing need of sustainability.
+- [Link to the article](https://www.reuters.com/article/us-space-exploration-spacex-satellites/musks-spacex-wins-pentagon-award-for-missile-tracking-satellites-idUSKBN26Q3A1)
 
 
 
