updated 8th's news about microsoft update rollback

--- a/_posts/2020-07-15-News-Sept.md
+++ b/_posts/2020-07-15-News-Sept.md
@@ -12,8 +12,8 @@ date: 2020-09-01
 2. [Bermuda Dives Deeper Into Crypto With Stimulus Coin Test Program](#bermuda-dives-deeper-into-crypto-with-stimulus-coin-test-program)    
 3. [EU to introduce crypto-assets regime by 2024, EU documents say](#eu-to-introduce-crypto-assets-regime-by-2024-eu-documents-say)  
 4. [Tesla to acquire German battery assembly maker](#tesla-to-acquire-german-battery-assembly-maker)  
-5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)
-
+5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)   
+6. [Microsoft takes action to resolve 365 services accessibility issues](#microsoft-takes-action-to-resolve-365-services-accessibility-issues)   
 
 
 
@@ -96,7 +96,51 @@ date: 2020-09-01
 
 
 
-## [September 1st, 2020]
+## [October 8th, 2020]
+
+##  Microsoft takes action to resolve 365 services accessibility issues
+- **Who:**  Microsoft Corporation
+- **What:**  They have reverted the update that has been made recently, as it caused accessibility issues with multiple 365 services.
+- **When:**  Wednesday, 7th of October, 2020
+- **Why:**  As the recent update caused a major outage to its 365 services - 18,000 incidents were reported involving Outlook. Earlier in the day, Microsoft tweeted that users may see impact to Microsoft Teams, Outlook, SharePoint Online, OneDrive for Business, and Outlook.com.
+- **How:**  It rolled back to a previous version - it reverted the update to a previous working version.
+- **So?:**  The company will be recovering from the update, and release further notice when its ready.
+- [Link to the article](https://www.reuters.com/article/us-microsoft-outage/microsoft-takes-action-to-resolve-365-services-accessibility-issues-idUSKBN26S36F)
+
+
+
+
+## [October 10th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**
+- **How:**  
+- **So?:**
+- [Link to the article]()
+
+
+
+
+
+## [October 12th, 2020]
+
+##  
+- **Who:**  
+- **What:**
+- **When:**  
+- **Why:**
+- **How:**  
+- **So?:**
+- [Link to the article]()
+
+
+
+
+
+## [October 14th, 2020]
 
 ##  
 - **Who:**  
